force-app/main/default/objects/Product_Name_Language__c/Product_Name_Language__c.object-meta.xml
<CustomObject>
    <label>Product Name Language</label>
    <nameField>
        <label>Product Name Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Name Language</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>