force-app/main/default/objects/Product_Name_Language__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Product Name Language</relationshipLabel>
    <relationshipName>Product_Name_Language</relationshipName>
    <type>Lookup</type>
</CustomField>