force-app/main/default/objects/Product_Name_Language__c/fields/Work_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Notes__c</fullName>
    <label>Work Order Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>